# mangler

./: AUTHORS  Application.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  README.txt  aclocal.m4  config.h.in  configure  configure.ac  mangler  mangler.desktop  mangler.spec
android/: .classpath  AndroidManifest.xml  README.txt
android/assets/: EULA
android/jni/: Android.mk
android/jni/ventrilo/: jni_wrappers.c
android/project/: AndroidManifest.xml
android/project/jni/: Android.mk
android/project/jni/ventrilo/: jni_wrappers.c
android/project/res/layout/: main.xml  server_edit.xml
android/project/src/org/mangler/: ChannelList.java  DataList.java  EventService.java  Main.java  ManglerDBAdapter.java  Player.java  ServerEdit.java  ServerList.java  ServerView.java  UserList.java
android/res/drawable/: background.xml  list_divider.xml
android/res/layout/: channel_row.xml  main.xml  main_landscape.xml  main_portrait.xml  server_edit.xml  server_list.xml  server_row.xml  server_view.xml  settings.xml  user_row.xml
android/res/layout-land/: main.xml  server_view.xml
android/res/values/: arrays.xml  strings.xml
android/res/xml/: preferences.xml
android/src/org/mangler/: ChannelList.java  Eula.java  EventService.java  Main.java  ManglerDBAdapter.java  Player.java  Recorder.java  ServerEdit.java  ServerList.java  ServerView.java  UserList.java  VentriloDebugLevels.java  VentriloEventData.java  VentriloEvents.java  VentriloInterface.java
android/src/org/mangler/android/: ChannelList.java  ChannelListEntity.java  Eula.java  EventHandler.java  EventService.java  Main.java  ManglerDBAdapter.java  PTTKeyPreference.java  Player.java  Recorder.java  ServerEdit.java  ServerList.java  ServerView.java  Settings.java  TTSWrapper.java  TTSWrapperImpl.java  UserList.java  VentriloDebugLevels.java  VentriloEventData.java  VentriloEvents.java  VentriloInterface.java  VolumePreference.java
debian/: changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  mangler.1  mangler.default.ex  mangler.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
fedora/: mangler32.spec  mangler64.spec
icons/: Makefile  mangler-icons.h
iphone/mangler-iphone.xcodeproj/: project.pbxproj
jukebox/: Makefile  jukebox.c
libventrilo3/: Makefile  Makefile.am  Makefile.in  libventrilo3.c  libventrilo3.h  libventrilo3_message.c  libventrilo3_message.h  lv3_test.c  pcmoutput  ventrilo3.h  ventrilo3_handshake.c  ventrilo_algo.h
libventrilo3/codec-test/: Makefile  celtdec.c  celtenc.c  gsmdec.c  gsmenc.c  pacat.c  parec.c  speexdec.c  speexenc.c
m4/: libtool.m4
mangler-iphone.xcodeproj/: danslo.pbxuser  danslo.perspectivev3  project.pbxproj
project/: .project  AndroidManifest.xml
project/jni/: Android.mk  jni_wrappers.c  libventrilo3.c  libventrilo3.h  ventrilo3.h
project/jni/ventrilo/: debug.c  debug.h  jni_wrappers.c  libventrilo3.c  libventrilo3.h  libventrilo3_message.c  libventrilo3_message.h  ventrilo3.h  ventrilo_algo.h
project/res/layout/: channel_list.xml  channel_row.xml  chat.xml  main.xml  server_edit.xml  server_list.xml  server_row.xml  server_view.xml  talk_view.xml  user_edit.xml  user_list.xml  user_row.xml
project/res/values/: strings.xml
project/src/org/mangler/: ChannelList.java  ChatView.java  DataList.java  EventData.java  EventService.java  Login.java  Main.java  Mangler.java  ManglerDBAdapter.java  Player.java  ReceiverIntents.java  Recorder.java  ServerEdit.java  ServerList.java  ServerView.java  SharedData.java  UserList.java  VentriloDebugLevels.java  VentriloEventData.java  VentriloEvents.java  VentriloInterface.java  main.java
rpm/: mangler.spec
sounds/: Makefile  bin2h.c  channelenter.h  channelleave.h  login.h  login.raw  logout.h  logout.raw  mangler-sounds.h  talkend.h  talkstart.h
src/: Makefile  Makefile.am  Makefile.in  channeltree.cpp  channeltree.h  inilib.cpp  inilib.h  mangler.1  mangler.cpp  mangler.h  mangler.ui  mangleradmin.cpp  mangleradmin.h  mangleralsa.cpp  mangleralsa.h  mangleraudio.cpp  mangleraudio.h  manglerbackend.cpp  manglerbackend.h  manglercharset.cpp  manglercharset.h  manglerchat.cpp  manglerchat.h  manglerconfig.cpp  manglerconfig.h  manglerg15.cpp  manglerg15.h  manglerintegration.cpp  manglerintegration.h  manglernetwork.cpp  manglernetwork.h  manglerosd.cpp  manglerosd.h  mangleross.cpp  mangleross.h  manglerprivchat.cpp  manglerprivchat.h  manglerpulse.cpp  manglerpulse.h  manglerrecorder.cpp  (+8 more)
